--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
+# dependencies
 node_modules/
+
+# build output
+dist/
+build/
+
+# local environment
+.env
+.env.local
+.env.*.local
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE/editor settings
+.vscode/
+.DS_Store
+
+# Optional: OS-specific files
+Thumbs.db
+
+# Ignore this extra Quiz folder
+Quiz/
+
 
